Add GET /v3/shipments/{id} endpoint
